--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "date-fns": "2.16.1",
     "formik": "2.1.5",
     "react": "16.13.1",
+    "react-datepicker": "3.2.2",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.3",
     "react-table": "7.5.1",
