--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.13.1",
     "react-datepicker": "3.2.2",
     "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "react-table": "7.5.1",
     "uuid": "8.3.0"
