--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "date-fns": "2.16.1",
     "formik": "2.1.5",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-datepicker": "3.2.2",
     "react-dom": "16.13.1",
